Add a title to the first cell of Jupyter code

--- a/notebooks/face-pose-pipeline.ipynb
+++ b/notebooks/face-pose-pipeline.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 📌 0. Initialize project requirements"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
